--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,19 @@
 body {
+    font-family: monospace;
+    margin: 0px;
+}
+
+form {
+    color: #dbd5d5;
+    width: 30%;
+    height: 50px;
+    margin: 20px auto;
+    padding: 25px;
+    border-radius: 2px;
+}
+
+
+/* body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
 }
@@ -8,14 +23,7 @@ body {
     margin: 50px;
 }
 
-form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 2px;
-}
+
 
 input {
     margin: 5px;
@@ -36,7 +44,7 @@ input {
   background-color: #008183;
 }
 
-/* This line makes the "Register" and "Login" buttons look like links */
+
 .link-button {
     background:none;
     color:inherit;
@@ -46,4 +54,4 @@ input {
     outline:0;
     border-bottom:1px solid #444; 
     cursor: pointer;
-}
+} */
