--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,57 +1,13 @@
 body {
-    font-family: monospace;
     margin: 0px;
+    background-color: rgb(53, 53, 53);
+    color: rgb(102, 143, 127);
 }
 
 form {
-    color: rgb(102, 143, 127);
     width: 30%;
     height: 50px;
     margin: 20px auto;
     padding: 25px;
     border-radius: 2px;
 }
-
-
-/* body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 0px;
-}
-
-.alert {
-    background-color: #ff4545;
-    margin: 50px;
-}
-
-
-
-input {
-    margin: 5px;
-    margin-bottom: 10px;
-}
-
-.log-in, .log-out, .register {
-  background-color: #00acb0;
-  border-radius: 4px;
-  color: #f8f8f8;
-  min-height: 50px;
-  min-width: 100px;
-  outline:0;
-  cursor: pointer;
-}
-
-.log-in:hover, .log-out:hover, .register:hover {
-  background-color: #008183;
-}
-
-
-.link-button {
-    background:none;
-    color:inherit;
-    border:none;
-    padding:0;
-    font: inherit;
-    outline:0;
-    border-bottom:1px solid #444; 
-    cursor: pointer;
-} */
