--- a/src/components/LoginPage/LoginPage.css
+++ b/src/components/LoginPage/LoginPage.css
@@ -1,19 +1,68 @@
+form {
+    margin: auto;
+    width: 40%;
+    font-family: 'Avenir';
+}
+
 input {
-    border: 1px solid rgb(53, 53, 53);
-    background-color: rgb(102, 143, 127);
-    color: rgb(53, 53, 53);
+    border: none;
+    border-bottom: 1px solid rgb(102, 143, 127);
+    background-color: rgb(53, 53, 53);
+    color: rgb(102, 143, 127);
 }
 
 label {
-    font-size: 12px;
-    font-family: sans-serif;
+    font-size: 14px;
     font-weight: lighter;
     letter-spacing: 2px;
+
 }
+
+.link-button {
+    font-size: 13px;
+    border-radius: 0in;
+    padding: 8px;
+    width: 85px;
+    border: 1px solid rgb(102, 143, 127);
+    background-color: rgb(53, 53, 53);
+    color: rgb(102, 143, 127);
+}
+
 
 input:focus,
 select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+.systemUser {
+    font-size: 13px;
+    padding: 8px;
+    width: 85px;
+    border: 1px solid rgb(102, 143, 127);
+    background-color: rgb(53, 53, 53);
+    color: rgb(102, 143, 127);
+    margin-top: 10px;
+}
+
+.login {
+    margin-top: 25px;
+    margin-left: 312px;
+
+}
+
+.register {
+    margin-left: 705px;
+}
+
+.username {
+    margin-left: 175px;
+    margin-bottom: 15px;
+    width: 225px;
+}
+.password {
+    margin-left: 176px;
+    margin-bottom: 15px;
+    width: 225px;
 }
