--- a/src/components/UserInput/UserInput.css
+++ b/src/components/UserInput/UserInput.css
@@ -1,17 +1,16 @@
 .userInputBox {
     border: solid 2px rgb(90, 90, 90);
-    width: 75%;
-    height: 100px;
-    margin: 0;
-    padding: 0;
     background-color: rgb(53, 53, 53);
-    /* text-align: right; */
-    padding: 10px;
     color: rgb(102, 143, 127);
+    width: 75%;
+    height: 50px;
+    padding: 10px;
     font: 1em 'Avenir';
+    text-align: right;
+    margin-left: 152px;
+    margin-top: 10px;
 }
 
 .userInputBox:focus {
-    /* border: 1px solid rgb(155, 148, 51); */
     outline-width: 0;
 }
