minor fixes. proper sql. begining read me.

--- a/src/components/BigLogo/BigLogo.css
+++ b/src/components/BigLogo/BigLogo.css
@@ -3,5 +3,5 @@
     font-family: 'Oslo II Regular', monospace;
     font-size: 15px;
     white-space: pre;
-    padding: 20px;
+    padding: 70px 20px 20px 40px;
 }
