--- a/src/components/SmallLogo/SmallLogo.css
+++ b/src/components/SmallLogo/SmallLogo.css
@@ -1,4 +1,5 @@
 .smallLogo {
+    color: rgb(86 162 132);
     font-family: 'Oslo II Regular', monospace;
     font-size: 8px;
     margin-left: 460px;
